# python-project-52

./: Makefile  README.md  build.sh  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml
hexlet-code/: .gitignore  Makefile  build.sh
hexlet-code/task_manager/: urls.py
labels/: apps.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py
labels/templates/labels/: index.html
statuses/: apps.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
statuses/templates/statuses/: create.html  index.html  update.html
task_manager/: filters.py  forms.py  models.py  settings.py  tests.py  urls.py  views.py
task_manager/migrations/: 0001_initial.py  0002_task.py  0003_label_task_labels.py  0004_alter_label_options_alter_task_options_and_more.py
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_executor_alter_task_name.py  0003_alter_task_name.py
tasks/templates/tasks/: index.html  show.html  update.html
templates/: base.html  create.html  delete.html  index.html  login.html  users_list.html
templates/labels/: create.html  delete.html  index.html
templates/statuses/: delete.html  index.html
templates/tasks/: create.html  delete.html  index.html  show.html
users/: forms.py  urls.py  views.py
users/templates/users/: index.html  update.html
